# wcurl

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  README.md  REUSE.toml  wcurl  wcurl.1  wcurl.md
.github/workflows/: requirements.txt  reuse.yml  test.yml
LICENSES/: curl.txt
tests/: compatibility.sh  curl-mock-version  integration.py  tests.sh
wcurl-rs/: Cargo.toml
wcurl-rs/src/: main.rs
